# Zenith-Hack

./: .gitignore  CMakeLists.txt  Instruction.md  README.md  build_all.bat  cleanup_project.bat  rebuild_and_update.bat  requirements.txt  setup_env.bat  start_frai.bat  stop_frai.bat  test_chat.json  test_input.json
src/cpp_ime/: AutoCorrect.cpp  AutoCorrect.h  BridgeClient.cpp  BridgeClient.h  DllMain.cpp  EditSession.cpp  EditSession.h  FraiIME.def  FraiTextService.cpp  FraiTextService.h  Globals.h  KeyHandler.cpp  LayoutSession.cpp  LayoutSession.h  Logger.h  UndoSession.cpp  UndoSession.h
src/installer/: register.bat
src/python_brain/: server.py
src/python_brain/bridge/: ipc.py
src/python_brain/core/: cloud_llm.py  local_llm.py  router.py  session.py  state_manager.py
src/python_brain/memory/: clipboard.py  vector.py
src/python_brain/ui/: chat_window.py  client.py  main.py  overlay.py  theme.py
tests/: test_autocorrect.json
